--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -34,9 +34,7 @@
         <h4 class="modal-title">Openingsuren</h4>
       </div>
       <div class="modal-body">
-        <div class="row">
-            <div
-               ng-if="cm.formData.openingHours.length === 0 || addData ">
+            <div>
                <form name="newOpeningHourForm">
                     <div class="row">
                         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
@@ -50,14 +48,14 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
                              ng-class="{'has-error': newOpeningHourForm.weekday.$invalid && newOpeningHourForm.weekday.$touched  }">
                               <div class="form-group">
                                    <select class="selectpicker"
                                       name="weekday"
                                       multiple
                                       start-label="Kies dag(en)"
-                                      ng-model="openingHour.dayOfWeek"
+                                      ng-model="cm.prototype.dayOfWeek"
                                       udb-multiselect
                                       required>
                                     <option value="monday">maandag</option>
@@ -78,7 +76,7 @@
                                  name="opens"
                                  class="form-control uur"
                                  placeholder="Bv. 08:00"
-                                 ng-model="cm.prototypeOpeningHour.opens"
+                                 ng-model="cm.prototype.opensAsDate"
                                  />
                               </div>
                         </div>
@@ -90,86 +88,70 @@
                                    name="closes"
                                    class="form-control uur"
                                    placeholder="Bv. 08:00"
-                                   ng-model="cm.prototypeOpeningHour.closes"
+                                   ng-model="cm.prototype.closesAsDate"
 
                                    />
                               </div>
                         </div>
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                            <a href="" ng-click="cm.addPrototypeOpeningHour()">Toevoegen</a>
+                        </div>
                     </div>
                 </form>
-        </div>
+            </div>
         <form name="openingHoursForm"></form>
-        <div class="row">
-            <ng-form name="openingHour">
+        <div class="row" ng-repeat="(i, openingHour) in cm.formData.openingHours">
+            <ng-form name="openingHourInfo">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
+                             ng-class="{'has-error': openingHour.weekday.$invalid && openingHour.weekday.$touched  }">
+                              <div class="form-group">
+                                   <select class="selectpicker"
+                                      name="weekday"
+                                      multiple
+                                      start-label="Kies dag(en)"
+                                      ng-model="openingHour.dayOfWeek"
+                                      udb-multiselect
+                                      required>
+                                    <option value="monday">maandag</option>
+                                    <option value="tuesday">dinsdag</option>
+                                    <option value="wednesday">woensdag</option>
+                                    <option value="thursday">donderdag</option>
+                                    <option value="friday">vrijdag</option>
+                                    <option value="saturday">zaterdag</option>
+                                    <option value="sunday">zondag</option>
+                                </select>
+                              </div>
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
+                             ng-class="{'has-error': openingHour.opens.$invalid && openingHour.opens.$touched}" >
+                              <div class="form-group">
+                              <input udb-time
+                                 type="time"
+                                 name="opens"
+                                 class="form-control uur"
+                                 placeholder="Bv. 08:00"
+                                 ng-model="openingHour.opensAsDate"
+                                 />
+                              </div>
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
+                           ng-class="{'has-error': openingHour.closes.$invalid && openingHour.closes.$touched}">
+                            <div class="form-group">
+                                 <input udb-time
+                                   type="time"
+                                   name="closes"
+                                   class="form-control uur"
+                                   placeholder="Bv. 08:00"
+                                   ng-model="openingHour.closesAsDate"
 
+                                   />
+                              </div>
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                            <a href="" ng-click="cm.addPrototypeOpeningHour()">X</a>
+                        </div>
             </ng-form>
         </div>
-
-
-        <table class="table">
-          <thead>
-          <tr>
-            <th>Dag(en)</th>
-            <th>Van</th>
-            <th></th>
-            <th>Tot</th>
-            <th></th>
-          </tr>
-          </thead>
-
-          <tr ng-repeat="(i, openingHour) in formData.openingHours">
-            <td>
-              <select class="selectpicker"
-                      name="weekday"
-                      multiple
-                      start-label="Kies dag(en)"
-                      ng-model="openingHour.dayOfWeek"
-                      ng-change="formData.saveOpeningHourDaySelection(i, openingHour.dayOfWeek)"
-                      ng-class="{'has-error': openingHour.errors.weekdayError}"
-                      udb-multiselect
-                      required>
-                <option value="monday">maandag</option>
-                <option value="tuesday">dinsdag</option>
-                <option value="wednesday">woensdag</option>
-                <option value="thursday">donderdag</option>
-                <option value="friday">vrijdag</option>
-                <option value="saturday">zaterdag</option>
-                <option value="sunday">zondag</option>
-              </select>
-            </td>
-            <td>
-              <input udb-time
-                     type="time"
-                     name="openingHour"
-                     class="form-control uur"
-                     placeholder="Bv. 08:00"
-                     ng-model="openingHour.opensAsDate"
-                     ng-blur="formData.validateOpeningHour(openingHour)"
-                     ng-model-options="{ debounce: 500 }"
-                     ng-class="{'has-error': openingHour.errors.openingHourError}" />
-              </td>
-              <td>
-                -&nbsp;
-              </td>
-              <td>
-
-                <input udb-time
-                       type="time"
-                       name="closingHour"
-                       class="form-control uur"
-                       placeholder="Bv. 08:00"
-                       ng-model="openingHour.closesAsDate"
-                       ng-blur="formData.validateOpeningHour(openingHour)"
-                       ng-model-options="{ debounce: 500 }"
-                       ng-class="{'has-error': openingHour.errors.closingHourError}"/>
-              </td>
-              <td>
-                <button type="button" class="close" aria-label="Close" ng-click="formData.removeOpeningHour(i)">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </td>
-          </tr>
-        </table>
         <a class="btn btn-link btn-plus" ng-click="formData.addOpeningHour('', '' , '', '', '')">
           Meer openingstijden toevoegen
         </a>
