--- a/src/event_form/components/price-form-modal/price-form-modal.html
+++ b/src/event_form/components/price-form-modal/price-form-modal.html
@@ -27,7 +27,7 @@
                                    required />
                         </span>
                 </div>
-                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5"
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"
                      ng-class="{ 'has-error': priceFieldForm.price.$invalid && priceFieldForm.price.$touched }">
                         <p class="form-control-static" ng-if="priceInfo.price === 0">
                             Gratis
@@ -57,6 +57,12 @@
                            ng-click="pfmc.setPriceItemFree(key)"
                            ng-switch-default>Gratis</a>
                 </div>
+               <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                   <a aria-hidden="true"
+                      ng-click="pfmc.deletePriceItem(key)"
+                      ng-if="pfmc.showPriceDelete(key)"
+                      class="close form-control-static">&times;</a>
+               </div>
            </ng-form>
         </div>
         <div class="row">
