III-1892 implement removeOpeningHour from eventFrom factory in openingHours template

--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -93,7 +93,7 @@
                       </div>
                   </div>
                   <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                      <a href="" ng-click="cm.addPrototypeOpeningHour()">X</a>
+                      <a href="" ng-click="cm.formData.removeOpeningHour(i)">X</a>
                   </div>
               </ng-form>
           </div>
