III-1892 fix save button in openinghour template

--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -162,9 +162,9 @@
         <button type="button" class="btn btn-default" data-dismiss="modal">Annuleren</button>
         <button type="button" class="btn btn-primary openingsuren-toevoegen"
                 data-dismiss="modal"
-                ng-click="formData.saveOpeningHours()"
+                ng-click="cm.formData.saveOpeningHours()"
                 ng-disabled="formData.openingHoursHasErrors">
-          Toevoegen
+          Opslaan
         </button>
       </div>
     </div>
