--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -1,9 +1,9 @@
-<div class="col-xs-12" ng-hide="!!formData.openingHours.length">
+<div class="col-xs-12" ng-hide="!!cm.formData.openingHours.length">
   <a href="#" class="btn btn-link btn-plus wanneer-openingsuren-link"
      data-toggle="modal" data-target="#wanneer-openingsuren-toevoegen">Openingsuren toevoegen</a>
 </div>
 
-<div class="col-xs-12 col-sm-8" ng-show="!!formData.openingHours.length">
+<div class="col-xs-12 col-sm-8" ng-show="!!cm.formData.openingHours.length">
   <section class="wanneer-openingsuren-resultaat">
     <table class="table table-condensed ">
       <thead>
@@ -15,7 +15,7 @@
       </th>
       </thead>
       <tbody>
-        <tr ng-repeat="openingHour in formData.openingHours">
+        <tr ng-repeat="openingHour in cm.formData.openingHours">
           <td ng-bind="openingHour.label"></td>
           <td>
             <span ng-bind="openingHour.opens"></span> – <span ng-bind="openingHour.closes"></span>
