III-1892 add also a label to the openingHour when added

--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -163,7 +163,7 @@
         <button type="button" class="btn btn-primary openingsuren-toevoegen"
                 data-dismiss="modal"
                 ng-click="cm.formData.saveOpeningHours()"
-                ng-disabled="formData.openingHoursHasErrors">
+                ng-disabled="cm.formData.openingHoursHasErrors">
           Opslaan
         </button>
       </div>
