--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -1,9 +1,9 @@
-<div class="col-xs-12" ng-hide="!!cm.formData.openingHours.length">
+<div class="col-xs-12" ng-hide="!!cm.openingHours.openingHours.length">
   <a href="#" class="btn btn-link btn-plus wanneer-openingsuren-link"
      data-toggle="modal" data-target="#wanneer-openingsuren-toevoegen">Openingsuren toevoegen</a>
 </div>
 
-<div class="col-xs-12 col-sm-8" ng-show="!!cm.formData.openingHours.length">
+<div class="col-xs-12 col-sm-8" ng-show="!!cm.openingHours.openingHours.length">
   <section class="wanneer-openingsuren-resultaat">
     <table class="table table-condensed ">
       <thead>
@@ -15,7 +15,7 @@
       </th>
       </thead>
       <tbody>
-        <tr ng-repeat="openingHour in cm.formData.openingHours">
+        <tr ng-repeat="openingHour in cm.openingHours.openingHours">
           <td ng-bind="openingHour.label"></td>
           <td>
             <span ng-bind="openingHour.opens"></span> – <span ng-bind="openingHour.closes"></span>
@@ -27,7 +27,7 @@
 
 </div>
 
-<div class="modal fade" id="wanneer-openingsuren-toevoegen" ng-init="formData.initOpeningHours()">
+<div class="modal fade" id="wanneer-openingsuren-toevoegen">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -45,7 +45,7 @@
                   <label for="newOpeningHourForm.closes">Tot</label>
               </div>
           </div>
-          <div class="row" ng-repeat="(i, openingHour) in cm.formData.openingHours">
+          <div class="row" ng-repeat="(i, openingHour) in cm.openingHours.temporaryOpeningHours">
               <ng-form name="openingHourInfo">
                   <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
                        ng-class="{'has-error': openingHour.weekday.$invalid && openingHour.weekday.$touched  }">
@@ -93,7 +93,7 @@
                       </div>
                   </div>
                   <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                      <a href="" ng-click="cm.formData.removeOpeningHour(i)">X</a>
+                      <a href="" ng-click="cm.openingHours.removeOpeningHour(i)">X</a>
                   </div>
               </ng-form>
           </div>
@@ -162,8 +162,8 @@
         <button type="button" class="btn btn-default" data-dismiss="modal">Annuleren</button>
         <button type="button" class="btn btn-primary openingsuren-toevoegen"
                 data-dismiss="modal"
-                ng-click="cm.formData.saveOpeningHours()"
-                ng-disabled="cm.formData.openingHoursHasErrors">
+                ng-click="cm.openingHours.saveOpeningHours()"
+                ng-disabled="cm.openingHours.openingHoursHasErrors">
           Opslaan
         </button>
       </div>
