III-1892 add validate function in openingHour component

--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -141,12 +141,11 @@
                                    class="form-control uur"
                                    placeholder="Bv. 08:00"
                                    ng-model="cm.prototype.closesAsDate"
-
                                    />
                               </div>
                         </div>
                         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            <a href="" ng-click="cm.addPrototypeOpeningHour()">Toevoegen</a>
+                            <a href="" ng-click="cm.validatePrototypeOpeningHour()">Toevoegen</a>
                         </div>
                     </div>
                 </form>
