--- a/src/duplication/event-duplication-step.component.html
+++ b/src/duplication/event-duplication-step.component.html
@@ -1,6 +1,7 @@
+<h1 class="title">Kopiëren en aanpassen</h1>
+
 <div class="alert alert-info" role="alert">
-    <strong>Je staat op het punt een evenement te kopiëren.</strong><br>
-    Om overlappende data te vermijden, kies je een nieuwe kalender voor dit evenement.
+  Je staat op het punt een evenement te kopiëren. Kies een tijdstip voor dit evenement.
 </div>
 
 <udb-event-duplication-calendar></udb-event-duplication-calendar>
