--- a/src/event_form/components/opening-hours-editor/opening-hours-editor.modal.html
+++ b/src/event_form/components/opening-hours-editor/opening-hours-editor.modal.html
@@ -2,35 +2,35 @@
     <h4 class="modal-title">Openingsuren</h4>
 </div>
 <div class="modal-body">
-    <div class="alert alert-danger" ng-show="cm.prototype.errors.weekdayError">
+    <div class="alert alert-danger" ng-show="ohemc.errors.dayOfWeek">
         <p class="text-danger">Je moet minstens 1 weekdag selecteren.</p>
     </div>
-    <div class="alert alert-danger" ng-show="cm.prototype.errors.openIsBeforeClose">
+    <div class="alert alert-danger" ng-show="ohemc.errors.openIsBeforeClose">
         <p class="text-danger">Gelieve een sluitingstijd in te geven die later is dan de openingstijd.</p>
     </div>
     <div class="row">
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-            <label for="newOpeningHourForm.weekday">Dagen</label>
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+            Dagen
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <label for="newOpeningHourForm.opens">Van</label>
+            Van
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <label for="newOpeningHourForm.closes">Tot</label>
+            Tot
         </div>
     </div>
-    <div class="row" ng-repeat="(i, openingHour) in cm.openingHours.temporaryOpeningHours">
-        <ng-form name="openingHourInfo">
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
-                 ng-class="{'has-error': openingHour.weekday.$invalid && openingHour.weekday.$touched  }">
+    <div class="row" ng-repeat="openingHours in ohemc.openingHoursCollection.openingHours">
+        <ng-form name="openingHoursInfo">
+            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5"
+                 ng-class="{'has-error': openingHoursInfo.dayOfWeek.$invalid && openingHoursInfo.dayOfWeek.$touched}">
                 <div class="form-group">
                     <select class="selectpicker"
-                            name="weekday"
+                            name="dayOfWeek"
                             multiple
                             start-label="Kies dag(en)"
-                            ng-model="openingHour.dayOfWeek"
+                            ng-model="openingHours.dayOfWeek"
                             udb-multiselect
-                            required>
+                            ng-required="true">
                         <option value="monday">maandag</option>
                         <option value="tuesday">dinsdag</option>
                         <option value="wednesday">woensdag</option>
@@ -41,100 +41,44 @@
                     </select>
                 </div>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
-                 ng-class="{'has-error': openingHour.opens.$invalid && openingHour.opens.$touched}" >
-                <div class="form-group">
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <div class="form-group"
+                     ng-class="{'has-error': openingHoursInfo.opens.$invalid && openingHoursInfo.opens.$touched}">
                     <input udb-time
                            type="time"
                            name="opens"
                            class="form-control uur"
                            placeholder="Bv. 08:00"
-                           ng-model="openingHour.opensAsDate"
-                    />
+                           ng-required="true"
+                           ng-model="openingHours.opensAsDate"/>
                 </div>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
-                 ng-class="{'has-error': openingHour.closes.$invalid && openingHour.closes.$touched}">
-                <div class="form-group">
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <div class="form-group"
+                     ng-class="{'has-error': openingHoursInfo.closes.$invalid && openingHoursInfo.closes.$touched}">
                     <input udb-time
                            type="time"
                            name="closes"
                            class="form-control uur"
                            placeholder="Bv. 08:00"
-                           ng-model="openingHour.closesAsDate"
-
-                    />
+                           ng-required="true"
+                           ng-model="openingHours.closesAsDate"/>
                 </div>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <a href="" ng-click="cm.openingHours.removeOpeningHour(i)">X</a>
+            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                <a href="" ng-click="ohemc.removeOpeningHours(openingHours)">X</a>
             </div>
         </ng-form>
     </div>
-    <div>
-        <form name="newOpeningHourForm">
-            <div class="row">
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
-                     ng-class="{'has-error': newOpeningHourForm.weekday.$invalid && newOpeningHourForm.weekday.$touched  }">
-                    <div class="form-group">
-                        <select class="selectpicker"
-                                name="weekday"
-                                multiple
-                                start-label="Kies dag(en)"
-                                ng-model="cm.prototype.dayOfWeek"
-                                ng-change="cm.validatePrototypeWeekDays()"
-                                udb-multiselect
-                                required>
-                            <option value="monday">maandag</option>
-                            <option value="tuesday">dinsdag</option>
-                            <option value="wednesday">woensdag</option>
-                            <option value="thursday">donderdag</option>
-                            <option value="friday">vrijdag</option>
-                            <option value="saturday">zaterdag</option>
-                            <option value="sunday">zondag</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
-                     ng-class="{'has-error': newOpeningHourForm.opens.$invalid && newOpeningHourForm.opens.$touched}" >
-                    <div class="form-group">
-                        <input udb-time
-                               type="time"
-                               name="opens"
-                               class="form-control uur"
-                               placeholder="Bv. 08:00"
-                               ng-model="cm.prototype.opensAsDate"
-                               ng-blur="cm.validatePrototypeOpeningHour()"
-                        />
-                    </div>
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"
-                     ng-class="{'has-error': newOpeningHourForm.closes.$invalid && newOpeningHourForm.closes.$touched}">
-                    <div class="form-group">
-                        <input udb-time
-                               type="time"
-                               name="closes"
-                               class="form-control uur"
-                               placeholder="Bv. 08:00"
-                               ng-model="cm.prototype.closesAsDate"
-                               ng-blur="cm.validatePrototypeClosingHour()"
-                        />
-                    </div>
-                </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <a href="" ng-click="cm.addPrototypeOpeningHour()"
-                       ng-hide="cm.prototype.hasErrors">Toevoegen</a>
-                </div>
-            </div>
-        </form>
-    </div>
+
+    <a class="btn btn-link btn-plus" ng-click="ohemc.createNewOpeningHours()">
+        Meer openingstijden toevoegen
+    </a>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Annuleren</button>
+    <button type="button" class="btn btn-default" ng-click="$dismiss()">Annuleren</button>
     <button type="button" class="btn btn-primary openingsuren-toevoegen"
-            data-dismiss="modal"
-            ng-click="cm.openingHours.saveOpeningHours()"
-            ng-disabled="cm.openingHours.openingHoursHasErrors">
+            ng-click="ohemc.saveOpeningHours()">
         Opslaan
     </button>
 </div>
