III-1892: Add and remove opening hours button styling

--- a/src/event_form/components/opening-hours-editor/opening-hours-editor.modal.html
+++ b/src/event_form/components/opening-hours-editor/opening-hours-editor.modal.html
@@ -69,7 +69,9 @@
                 </div>
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <a href="" ng-click="ohemc.removeOpeningHours(openingHours)">X</a>
+                <button class="btn btn-link" ng-click="ohemc.removeOpeningHours(openingHours)">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </button>
             </div>
         </ng-form>
     </div>
