III-916: Add delete option and modal to organization search items

--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -30,3 +30,4 @@
 @import "query-search-result.less";
 @import "management-form.less";
 @import "moderation.less";
+@import "organization-search-item.less";
